# rules_go

./: MODULE.bazel  go.mod  go.sum  tools.go
docs/go/core/: bzlmod.md
docs/go/extras/: extras.bzl  extras.md
extras/: gomock.bzl
extras/gomock/: BUILD.bazel
go/private/: repositories.bzl
tests/extras/gomock/reflective/: BUILD.bazel
