alias(
    name = "gomock",
    actual = "@org_uber_go_mock//gomock",
    visibility = ["//visibility:public"],
)

alias(
    name = "mockgen",
    actual = "@org_uber_go_mock//mockgen",
    visibility = ["//visibility:public"],
)

alias(
    name = "mockgen_model",
    actual = "@org_uber_go_mock//mockgen/model",
    visibility = ["//visibility:public"],
)
